# bossdb-collab-notebooks

./: README.md  generate_notebook_from_template.py  projects.json  pyproject.toml  requirements.txt
.github/actions/install_uv/: action.yml
.github/workflows/: generate-notebooks.yml
notebooks/: notebook_Kharris15.ipynb  notebook_Lee2016.ipynb  notebook_Takemura2013.ipynb  notebook_allen2017.ipynb  notebook_allenMouseReferenceAtlas2017.ipynb  notebook_amunts2015.ipynb  notebook_bao_alford2025.ipynb  notebook_bates_phelps_kim_yang2025.ipynb  notebook_bhatla2015.ipynb  notebook_bloss2016.ipynb  notebook_bloss2018.ipynb  notebook_bock2011.ipynb  notebook_branch2018.ipynb  notebook_bumbarger2013.ipynb  notebook_chandok2026.ipynb  notebook_collman2015.ipynb  notebook_dyer2016.ipynb  notebook_dyer2017.ipynb  notebook_flywire.ipynb  notebook_flywire2020.ipynb  notebook_gao2019.ipynb  notebook_gcwensa2024.ipynb  notebook_gerhard2017.ipynb  notebook_harris2015.ipynb  notebook_helmstaedter13.ipynb  notebook_helmstaedter2013.ipynb  notebook_hildebrand2017.ipynb  notebook_ishibashi2021.ipynb  notebook_kasthuri2015.ipynb  notebook_kristina2015.ipynb  notebook_kuan_phelps2020.ipynb  notebook_kutten2016.ipynb  notebook_lee2016.ipynb  notebook_maher_briegel2023.ipynb  notebook_meirovitch2023.ipynb  notebook_meirovitch2025.ipynb  notebook_micheva2015.ipynb  notebook_microns-basil.ipynb  notebook_microns-interneuron.ipynb  notebook_microns-minnie.ipynb  (+34 more)
scripts/: auto_notebook_generation.py  manual_notebook_generation.py
template/: intern_demo.ipynb
